added sopen command for opening with sudo (must use gksudo)

--- a/ReadMe
+++ b/ReadMe
@@ -1,7 +1,9 @@
 ####Readme Open command for linux ####
 
 
-
+##Dependencies##
+you must have gksudo    (gksu package on archlinux) 
+for sopen to work properly
 
 
 ### Installing ###
